# chess-project

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  Project.cbp  README.MD  chess-engine  chess-engine-test  chess-engine.cbp  cmake_install.cmake  startup.sh  tiny-osc-test
controller-interface/: controllerTester.py  interface.py
controller-interface/test/: i2ctest.py  ldrTest.py
cpp-chess-engine/: CMakeLists.txt  README.MD  build.sh  cmake_install.cmake  install-dependencies
cpp-chess-engine/src/: CMakeLists.txt  ChessEngine.cpp  ChessEngine.h  ChessEngineTester.cpp  ChessEngineTester.h  MoveBuilder.cpp  MoveBuilder.h  MoveBuilderTester.cpp  MoveBuilderTester.h  chess-engine  cmake_install.cmake  main.cpp
cpp-chess-engine/src/JUCE/: JUCEBuildTree.cmake  JUCEConfig.cmake  JUCEConfigVersion.cmake  JUCEExportConfig.cmake  cmake_install.cmake
cpp-chess-engine/src/JUCE/modules/: cmake_install.cmake
cpp-chess-engine/src/JUCE/tools/: JUCEConfig.cmake  JUCEExportConfig.cmake  JUCEToolsExport.cmake  cmake_install.cmake
cpp-chess-engine/src/shallow-blue-fork/: .gitignore  CMakeLists.txt  cmake_install.cmake  shallow_blue_interface.hpp
cpp-chess-engine/src/shallow-blue-fork/src/: bitutils.h  eval.h
cpp-chess-engine/src/tests/: chess_engine_tests.cpp  tiny_osc_tests.cpp
cpp-chess-engine/src/tinyosc/: CMakeLists.txt  cmake_install.cmake  main.c  osc_interface.h
pd-sound-engine/: Overzicht.pd  Overzicht2.pd  README.MD  Zet sound.pd  koning.cl.pd  koningin.cl.pd  loper.cl.pd  pion.cl.pd  prd.cl.pd  toren.cl.pd  wavetable_with_clone.pd  zetten.cl.pd
src/: Makefile  cmake_install.cmake  main.cpp  shallow_blue_interface.hpp  utils.h
src/shallow-blue-fork/: CMakeLists.txt  Makefile  cmake_install.cmake
src/shallow-blue-fork/src/: main.cc  uci.cc  uci.h
src/tests/: chess_engine_tests.cpp  test.cpp  tiny_osc_tests.cpp
src/tinyosc/: Makefile  cmake_install.cmake  osc_interface.h  tinyosc.c
